1.0.2 (unreleased)
======
* Use `poll` for select when available.

1.0.1 (2023-07-01)
=====
* Fix wrong transport being used when updating metadata.

1.0.0 (2023-06-27)
=====
* Simplify Host header logic, pass host through SSL SNI. Thanks to @N6UDP!
* Rewrote transport logic to be more flexible. Leave SSL implementation to caller.

0.6.7 (2022-03-18)
=====
* Default to ipv4 host resolution for backward
  compatibility.

0.6.6 (2022-01-30)
======
* Add support for ipv6 connection,
  thanks to @gilou and @jcourreges (#6)

0.6.5 (2020-03-27)
=====
* Switched to dune.
* Added optional offset and length parameters to send function.
* Added support for Expect: 100-continue to PUT requests (savonet/liquidsoap#1078).

0.6.4 (2019-08-22)
=====
* Set SSL to use default path for certificate resolution.
* Fix fd leak with SSL

0.6.3 (2019-08-04)
=====
* Set chunked capability based on request
  not response HTTP version.

0.6.2 (2018-08-16)
=====
* Fix fd leak in unix_transport,
  make sure it doesn't happen in SSL
  implementations as well (savonet/liquidsoap#548)

0.6.1 (2017-11-02)
=====
* Fix hostname resolution (savonet/liquidsoap#496)

0.6.0 (2017-10-14)
=====
* Make IPv6 implicit.
* Add debug flag (-g) to OCAMLFLAGS
* Fix host resolution.

0.5.0 (2017-04-11)
=====
* Add support for OSX's SecureTransport

0.4.1 (2016-06-26)
=====
* Revert back to Bytes.t for backward compatibility
  with old OCaml compilers.

0.4.0 (2016-06-25)
=====
* Fixed shoutcast v2 metadata update
* Better API
* Switch to Bytes.set
* Implement Https connection for icecast.

0.3.0 (2015-07-29)
=====
* Switch to Bytes API.
* Implemented shoutcast v2 protocol extension
  allowing multiple sources connected to the same
  shoutcast v2 server.
* Added experimental HTTP capabilities:
  - Use any PUT, POST or SOURCE verb
  - Use chunked transfer for HTTP 1.1
* Added HTTP Host: header.

0.2.2 (2011-04-10)
=====
* Add second timeout parameters for connection attempts.