@@ -1,6 +1,6 @@
 # This file is generated by dune, edit dune-project instead
 opam-version: "2.0"
-version: "1.0.1"
+version: "1.0.2"
 synopsis: "OCaml client for the various icecast & shoutcast source protocols"
 description:
   "The cry library is an implementation of the various icecast & shoutcast protocols to connect to streaming servers such as icecast"
