@@ -1,6 +1,7 @@
 1.0.2 (unreleased)
 ======
 * Use `poll` for select when available.
+* Make sure `close` call always closes the socket.
 
 1.0.1 (2023-07-01)
 =====
